	    Stegen)
	  - Fixed crash when destroying bag of holding containing gold pieces
	  - Fixed gold not merging in containers after container has been BUC
	    tested on altars
	  - Empty bag of tricks don't get destroyed by wands of cancellation
	  - Fixed false warning in dungeon overview when encountering
	    lighting shops
	  - Blasts or potions of acid destroy iron bars

	* vanilla bug fixes:
	  - Prevent the Book of the Dead from being destroyed when the
	    player falls into lava. (from GruntHack)
	  - Fix security bug in options handler (reported by Matthew Daley,
	    fixed by Pasi Kallinen)
	  - Honor pickup_burden when picking up gold.
	  - Fix TTY crashing when a location has more than 32k items (from NAO)
	  - Correct article when choking on named artifacts
	  - C343-8: Plural of Nazgul is Nazgul, not Nazguls
	  - C343-175: Chatting to prisoners may give an inappropriate message
	    (from UnNetHackPlus, thanks to Reddit user Nuclear_Winterfell)

2012-04-01  UnNetHack 4.0.0
	* Uncursed and blessed scrolls of magic mapping reveal secret doors
	* Blessed scrolls of magic mapping reveal objects
	* Dump log: show same information on final dump as wizard mode
	* Minotaurs respect Elbereth
	* Bones level tracking
	* Conduct: Racial armor tracking
	* extra AC point per worn piece of racial armor
	* Reduce occurrences of hint daemon to once per game
	* Automatically identify rings dropped into a sink when message is
	  shown
	* Allow stethoscopes to identify egg types (unless hallucinating)
	  (from SporkHack)
	* Reduce AC of dragon scales to 1 and dragon scale mails to 5
	* Killing your Quest leader opens up the stairs to the lower quest
	  levels (from SporkHack)

	* new branch:
	  - the Dragon Caves (from NetHack Brass R/S)

	* new dungeon features:
	  - muddy swamp (from NetHack Brass)

	* added items:
	  - chromatic dragon scales and scale mail

	* new monsters:
	  - chromatic dragons
	  - wax golems (providing candles as death drop) (from Slash'Em)
	